File Browser plugin: make search string partial-matching

BUG: 472374
FIXED-IN: 23.08.0


(cherry picked from commit 487b28b4de1bbf34cf730e9ff1a9a9f0d5b96efb)